bot 注解化配置